# worst-c-sublanguage

./: CMakeLists.txt  build.sh
res/: test.cpp
src/: c_lexer.l  c_parser.y
