cmake_minimum_required(VERSION 3.19)
project(tema1)
find_package(FLEX)
find_package(BISON)
BISON_TARGET(scanner src/c_parser.y  ${CMAKE_CURRENT_BINARY_DIR}/parser.c DEFINES_FILE ${CMAKE_CURRENT_BINARY_DIR}/parser.h)
FLEX_TARGET(scanner src/c_lexer.l lex.yy.c)
include_directories(src) 
include_directories(${CMAKE_CURRENT_BINARY_DIR})
add_executable(scanner ${BISON_scanner_OUTPUTS} ${FLEX_scanner_OUTPUTS})
target_link_libraries(scanner ${FLEX_LIBRARIES})